--- a/GestionPOA/App/Views/metas/asignacion.html
+++ b/GestionPOA/App/Views/metas/asignacion.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="MetasController as vm">
+﻿<div ng-controller="MetasDepartamentosController as vm">
     <div class="col-md-12">
         <div class="card">
             <div class="card-header card-header-icon" data-background-color="green">
@@ -9,47 +9,46 @@
                 <form name="addAsignacionMetaForm" ng-submit="vm.addAsignacionMeta();" novalidate>                    
                     <div class="form-group label-floating col-lg-6 col-md-12">
                         <label class="control-label">SUBSISTEMA</label>
-                        <select class="form-control" ng-model="vm.ObjetivoEstrategico.SubsistemaId" ng-options="arrOptionSelect.SubsistemaId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
+                        <select class="form-control" ng-model="vm.asignacion.SubsistemaId" ng-change="vm.cargarObjetivosEstrategicos(vm.asignacion.SubsistemaId)" ng-options="arrOptionSelect.SubsistemaId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects" required>
                             <option value="">-- Seleccione --</option>
-                        </select>
+                        </select>                       
                     </div>
                     <div class="form-group label-floating col-lg-6 col-md-12">
                         <label class="control-label">OBJETIVO ESTRATÉGICO INSTITULACIONAL</label>
-                        <select class="form-control" ng-model="vm.ObjetivoEstrategico.SubsistemaId" ng-options="arrOptionSelect.SubsistemaId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
+                        <select class="form-control" ng-model="vm.asignacion.ObjetivosEstragicoId" ng-change="vm.cargarObjetivosEspecificos(vm.asignacion.ObjetivosEstragicoId)" ng-options="arrOptionSelect.ObjetivosEstragicoId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionObjEstrategicos" required>
                             <option value="">-- Seleccione --</option>
                         </select>
                     </div>
                     <div class="form-group label-floating col-lg-6 col-md-12">
-                        <label class="control-label">OBJETIVO ESPECÍFICO INSTITUCIONAL</label>
-                        <select class="form-control" ng-model="vm.ObjetivoEstrategico.SubsistemaId" ng-options="arrOptionSelect.SubsistemaId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
+                        <label class="control-label">OBJETIVO ESPECÍFICO INSTITUCIONAL</label> 
+                        <select class="form-control" ng-model="vm.asignacion.ObjetivosEspecificosId" ng-change="vm.cargarEstrategias(vm.asignacion.ObjetivosEspecificosId)" ng-options="arrOptionSelect.ObjetivosEspecificosId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionObjEspecificos" required>
                             <option value="">-- Seleccione --</option>
                         </select>
                     </div>
                     <div class="form-group label-floating col-lg-6 col-md-12">
                         <label class="control-label">ESTRATEGIAS</label>
-                        <select class="form-control" ng-model="vm.ObjetivoEstrategico.SubsistemaId" ng-options="arrOptionSelect.SubsistemaId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
+                        <select class="form-control" ng-model="vm.asignacion.EstrategiasId" ng-change="vm.cargarIndicadores(vm.asignacion.EstrategiasId)" ng-options="arrOptionSelect.EstrategiasId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionEstrategias" required>
                             <option value="">-- Seleccione --</option>
                         </select>
                     </div>
                     <div class="form-group label-floating col-lg-6 col-md-12">
                         <label class="control-label">INDICADORES</label>
-                        <select class="form-control" ng-model="vm.ObjetivoEstrategico.SubsistemaId" ng-options="arrOptionSelect.SubsistemaId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
+                        <select class="form-control" ng-model="vm.asignacion.IndicadorId" ng-change="vm.cargarMetasByIndicador(vm.asignacion.IndicadorId)" ng-options="arrOptionSelect.IndicadorId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionIndicadores" required>
                             <option value="">-- Seleccione --</option>
                         </select>
                     </div>
                     <div class="form-group label-floating col-lg-6 col-md-12">
                         <label class="control-label">METAS</label>
-                        <select class="form-control" ng-model="vm.ObjetivoEstrategico.SubsistemaId" ng-options="arrOptionSelect.SubsistemaId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
+                        <select class="form-control" ng-model="vm.asignacion.MetaId" ng-options="arrOptionSelect.id as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionMetas" required>
                             <option value="">-- Seleccione --</option>
                         </select>
                     </div>
                     <div class="form-group label-floating col-lg-12 col-md-12">
                         <label class="control-label">DEPARTAMENTO</label>
-                        <select class="form-control" ng-model="vm.ObjetivoEstrategico.SubsistemaId" ng-options="arrOptionSelect.SubsistemaId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
+                        <select class="form-control" ng-model="vm.asignacion.id_subunidad" ng-options="arrOptionSelect.id_subunidad as arrOptionSelect.nombre_subunidad for arrOptionSelect in vm.arrOptionDepartamentos" required>
                             <option value="">-- Seleccione --</option>
                         </select>
-                    </div>
-                    <input type="hidden" ng-model="vm.ObjetivoEstrategico.eliminado" ng-value="vm.ObjetivoEstrategico.eliminado = 0">
+                    </div>                    
                     <input type="submit" value="Registrar" class="btn btn-fill btn-success" ng-disabled="addAsignacionMetaForm.$invalid" />
                 </form>
             </div>
@@ -82,21 +81,21 @@
                     </div>
                 </div>
                 <table ng-table="vm.tableParams" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
-                    <tr ng-repeat="ObjetivosEstrategicos in vm.listObjetivosEstrategico | orderBy: 'id' | filter:searchText as results">
+                    <tr ng-repeat="MetaAsignada in vm.listMetasAsignadas | orderBy: 'id' | filter:searchText as results">
                         <td title="'Ìtems'" class="text-center">
                             {{$index +1}}
                         </td>
                         <td title="'Departamento'" class="text-center">
-                            {{ObjetivosEstrategicos.Descripcion}}
+                            {{MetaAsignada.nombre_subunidad}}
                         </td>
                         <td title="'Meta'" class="text-center">
-                            {{ObjetivosEstrategicos.DescripcionSubsistemas}}
+                            {{MetaAsignada.Descripcion}}
                         </td>
                         <td title="'Acciones'" class="td-actions text-center">
-                            <button type="button" rel="tooltip" title="Editar" data-toggle="modal" data-target="#myModal" ng-click="vm.ModalObjetivosEstrategicos(ObjetivosEstrategicos)" class="btn btn-success btn-round">
+                            <button type="button" rel="tooltip" title="Editar" data-toggle="modal" data-target="#myModal" ng-click="vm.modalMetaAsignada(MetaAsignada)" class="btn btn-success btn-round">
                                 <i class="material-icons">edit</i>
                             </button>
-                            <button type="submit" rel="tooltip" title="Eliminar" class="btn btn-danger btn-round" ng-click="vm.deleteObjetivoEstrategico(ObjetivosEstrategicos.ObjetivosEstragicoId, $index)">
+                            <button type="submit" rel="tooltip" title="Eliminar" class="btn btn-danger btn-round" ng-click="vm.deleteAsignacionMeta(MetaAsignada.id, $index)">
                                 <i class="material-icons">close</i>
                             </button>
                         </td>
@@ -117,22 +116,49 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title text-success">:: Actualizar Objetivo Estrategicos Institucionales ::</h4>
                 </div>
-                <form name="updateObjetivoEstrategicoForm" class="ui form" ng-submit="vm.updateObjetivoEstrategico()" novalidate>
+                <form name="updateObjetivoEstrategicoForm" class="ui form" ng-submit="vm.updateAsignacionMeta()" novalidate>
                     <div class="modal-body">
                         <div class="form-group label-floating">
-                            <label class="control-label">OBJETICO ESTRATÉGICO INSTITUCIONAL</label>
-                            <select class="form-group" ng-model="vm.modalObjetivoEstrategico.SubsistemaId" ng-options="arrOptionSelect.SubsistemaId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects">
-                                <option value="0">-- Seleccione --</option>
+                            <label class="control-label"><span class="text-success"><b>Departamento: </b> </span> {{vm.Departamento | uppercase}} </label>
+                        </div>
+                        <br />
+                        <div class="form-group label-floating col-lg-6 col-md-12">
+                            <label class="control-label">SUBSISTEMA</label>
+                            <select class="form-group" ng-model="vm.asignacionModal.SubsistemaId" ng-change="vm.cargarObjetivosEstrategicos(vm.asignacionModal.SubsistemaId)" ng-options="arrOptionSelect.SubsistemaId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionSelects" required>
+                                <option value="">-- Seleccione --</option>
                             </select>
                         </div>
-                        <div class="form-group label-floating">
-                            <label class="control-label">OBJETIVO ESPECíFICO</label>
-                            <div class="form-group">
-                                <input type="text" class="form-control" ng-model="vm.modalObjetivoEstrategico.Descripcion" required>
-                            </div>
+                        <div class="form-group label-floating col-lg-6 col-md-12">
+                            <label class="control-label">OBJETIVO ESTRATÉGICO INSTITULACIONAL</label>
+                            <select class="form-group" ng-model="vm.asignacionModal.ObjetivosEstragicoId" ng-change="vm.cargarObjetivosEspecificos(vm.asignacionModal.ObjetivosEstragicoId)" ng-options="arrOptionSelect.ObjetivosEstragicoId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionObjEstrategicos" required>
+                                <option value="">-- Seleccione --</option>
+                            </select>
                         </div>
-                        <input type="hidden" ng-model="vm.modalObjetivoEstrategico.ObjetivosEstragicoId" ng-value="vm.modalObjetivoEstrategico.ObjetivosEstrategicoId">
-                        <input type="hidden" ng-model="vm.modalObjetivoEstrategico.eliminado" ng-value="vm.modalObjetivoEstrategico.eliminado = 0">
+                        <div class="form-group label-floating col-lg-6 col-md-12">
+                            <label class="control-label">OBJETIVO ESPECÍFICO INSTITUCIONAL</label>
+                            <select class="form-group" ng-model="vm.asignacionModal.ObjetivosEspecificosId" ng-change="vm.cargarEstrategias(vm.asignacionModal.ObjetivosEspecificosId)" ng-options="arrOptionSelect.ObjetivosEspecificosId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionObjEspecificos" required>
+                                <option value="">-- Seleccione --</option>
+                            </select>
+                        </div>
+                        <div class="form-group label-floating col-lg-6 col-md-12">
+                            <label class="control-label">ESTRATEGIAS</label>
+                            <select class="form-group" ng-model="vm.asignacionModal.EstrategiasId" ng-change="vm.cargarIndicadores(vm.asignacionModal.EstrategiasId)" ng-options="arrOptionSelect.EstrategiasId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionEstrategias" required>
+                                <option value="">-- Seleccione --</option>
+                            </select>
+                        </div>
+                        <div class="form-group label-floating col-lg-6 col-md-12">
+                            <label class="control-label">INDICADORES</label>
+                            <select class="form-group" ng-model="vm.asignacionModal.IndicadorId" ng-change="vm.cargarMetasByIndicador(vm.asignacionModal.IndicadorId)" ng-options="arrOptionSelect.IndicadorId as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionIndicadores" required>
+                                <option value="">-- Seleccione --</option>
+                            </select>
+                        </div>
+                        <div class="form-group label-floating col-lg-6 col-md-12">
+                            <label class="control-label">METAS</label>
+                            <select class="form-group" ng-model="vm.asignacionModal.MetaId" ng-options="arrOptionSelect.id as arrOptionSelect.Descripcion for arrOptionSelect in vm.arrOptionMetas" required>
+                                <option value="">-- Seleccione --</option>
+                            </select>
+                        </div>
+                        <input type="hidden" ng-model="vm.asignacionModal.id" ng-value="vm.asignacionModal.id">
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-fill btn-success" ng-disabled="updateObjetivoEstrategicoForm.$invalid">Actualizar <i class="refresh icon"></i></button>
